# fraudlens-detector

./: Dockerfile  README.md  docker-compose.yml  requirements.txt  run_api.py
api/: main.py  test_blacklist.http
api/test/: test_analyze_api.http
db/: url_good_database.xlsx
docs/: api_spec.xlsx
scamshield_ai_backend/: .gitignore  README.md  pyproject.toml
scamshield_ai_backend/app/: main.py
scamshield_ai_backend/app/models/: __init__.py  data_models.py  rag_core_models.py
scamshield_ai_backend/app/routes/: __init__.py  classification_router.py  ingestion_router.py
scamshield_ai_backend/app/services/: __init__.py  rag_core_service.py
scamshield_ai_backend/data/: fraud_scenarios.jsonl
scamshield_ai_backend/scripts/: seed_posts.py
scamshield_ai_backend/tests/: test_classification_router.py  test_ingestion_router.py  test_models.py  test_rag_core_service.py  test_seed_posts_script.py
src/blacklist_analysis/: README.md  data_download_manager.py  data_extraction_manager.py  feature_analysis_manager.py  main.py  model_generate_manager.py
src/blacklist_analysis/data/database/: all_url_good_and_bad.xlsx  lineid_database.xlsx  url_bad_database.xlsx
src/blacklist_analysis/data/raw_data/: line_opendata.csv
src/blacklist_analysis/model/: GradientBoostingClassifier_model.onnx
src/managers/: blacklist_manager.py
src/test/: blacklist_manager_test.py
training/raw_data/: url_opendata.json
