[tool.poetry]
name = "scamshield-ai-backend"
version = "0.1.0"
description = "Backend for ScamShield AI"
authors = ["Your Name <you@example.com>"] # Placeholder
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.1"
httpx = "^0.27.0" # For calling RAGCore-X API

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-httpx = "^0.30.0" # Added this line
# Add black, ruff, isort later if needed

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
